Fixed checkbox hovering on mobile devices, gave signup header text shadow.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -367,6 +367,7 @@ form h4 {
         font-weight: 400;
         font-size: 28px;
         text-align:center;
+        text-shadow: 2px 2px black;
     }
 
     .home-mobile {
